Added time calculation and output.txt

--- a/CaPS_CW1.vcxproj.filters
+++ b/CaPS_CW1.vcxproj.filters
@@ -17,6 +17,7 @@
   <ItemGroup>
     <Text Include="ReadMe.txt" />
     <Text Include="Implimentation Details.txt" />
+    <Text Include="outputs.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
