--- a/CaPS_CW1.vcxproj
+++ b/CaPS_CW1.vcxproj
@@ -144,6 +144,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <Text Include="Implimentation Details.txt" />
+    <Text Include="outputs.txt" />
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
